conf/k8s/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring-log
spec:
  rules:
  - host: grafana.ditochallenge.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
